--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "task-manager-backend",
   "version": "2.0.0",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch src/main.ts",
     "start": "node dist/main.js",
