--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "builds": [{ "src": "src/api/**/*.ts", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/src/api/index.ts" }]
 }
-
-
